feat: moved export import to internal api (#133)
* feat: moved export import to internal api

* fix: removed public modifier
